-----------------
2015-11-15 3.2.7
-----------------

* Issue #6973: When we know a subprocess.Popen process has died, do
  not allow the send_signal(), terminate(), or kill() methods to do
  anything as they could potentially signal a different process.

-----------------
2015-11-14 3.2.7rc2
-----------------

* Moved the repository from code.google.com to github.
* Added a _WAIT_TIMEOUT to satisfy the unsupported people entirely on
  their own trying to use this on Windows.
* Similarly: Updated setup.py to not build the extension on non-posix.

-----------------
2014-06-01 3.2.7rc1
-----------------

* Issue #21618: The subprocess module could fail to close open fds that were
  inherited by the calling process and already higher than POSIX resource
  limits would otherwise allow.  On systems with a functioning /proc/self/fd
  or /dev/fd interface the max is now ignored and all fds are closed.

-----------------
2014-04-23 3.2.6
-----------------

* Fixes issue #21291: Popen.wait() is now thread safe so that multiple
  threads may be calling wait() or poll() on a Popen instance at the same time
  without losing the Popen.returncode value.
* Fixes issue #14396: Handle the odd rare case of waitpid returning 0 when not
  expected in Popen.wait().
* Fixes issue #16962: Use getdents64 instead of the obsolete getdents syscall
  on Linux.  Some architectures do not implement the latter.

-----------------
2013-12-10 3.2.5
-----------------

* Fixes issue #15798: subprocess.Popen() no longer fails if file
  descriptor 0, 1 or 2 is closed.
* Fixes issue #18763: close_fd file descriptors are now closed after
  any preexec_fn call.

-----------------
2013-06-15 3.2.5rc1
-----------------

* Fixes issue #16650 - Don't reference ECHILD from outside the local scope.
* Unittests no longer spew any test data for human verification to stdout.
* Remove a bare print to stdout that could have happened if the child process
  wrote garbage to its pre-exec error pipe.